Revision history for Perl extension Wx.

0.9913 TBR
    - wrapped wxEventFilter for 2.9.3 +
    - updated missing Wx::App methods for 2.9.4 +
    - added wxEvtHandler::ProcessEventLocally for 2.9.1+
    - added some absent wxWindow methods
    - updated wxTopLevelWindow

0.9912 Fri Sep 21 2012
    - wrapped wxListCtrl::SetItemPtrData.
    - updated to use sv_magicext / mg_findext so
      external modules do not stomp on our magic.
    - updated wxListView so that LC_VIRTUAL style works.
    - set wxListCtrl full constructor to create evthandler.
    - updated Wx::Ribbon controls for 2.9.4 interface +
      tool/button 'Add' and 'Insert' methods now return objects
      as described in the docs instead of int id's.
    - added SetClientData to PGProperty and PropertyGridInterface
    - Wx::ToolBar->SetClientData now deletes any prior set Wx::Object
    - wxDataViewListCtrl and wxDataViewListStore - fix ClientData for >= 2.9.4
    - /usr/local/lib needs removing from LD:DL:FLAGS on all *nix types
    - nostdinc now removed from any flags on MacOSX
    - Fixed handling of asserts and debug level > 0 on wxWidgets >= 2.9.3
    - Added wxApp::OnAssertFailure

0.9911 Fri Aug 24 2012
    - wxDataView - updated for 2.9.4
    - wxTreeEvent::GetKeyEvent() added
    - wxRichTextCtrl::LineBreak() added

0.9910 no release

0.9909 Thu May 31 2012
    - corrected wxThePrintPaperDatabase

0.9908 Tue May 22 2012
    - wxHtmlPrintout & wxRichTextPrintout correct typemap and destruction
    - wxRichTextBuffer - added copy constructor
    - wxPrintPaperDatabase & wxPrintPaperType added

0.9907 Thur May 10 2012
    - wrapped wxHtmlPrintout
    - added missing wxPrintout methods
    - fixed GetPageInfo for wxRichTextPrintout
    - fixed broken Makefile.PL with recent EUMM on Mac
    - some minor additions to RichTextCtrl/RichTextBuffer

0.9906 Tue Mar 27 2012
    - wrapped wxWebView ( wxWidgets ge 2.9.3 )
    - wrapped wxTimePickerCtrl ( wxWidgets ge 2.9.3 ) 